objects/project_cloud__Board_Process_Step__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Board_Process_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Board Process Grouping this Step is in</inlineHelpText>
        <label>Board Process Grouping</label>
        <referenceTo>project_cloud__Board_Process_Grouping__c</referenceTo>
        <relationshipLabel>Steps</relationshipLabel>
        <relationshipName>Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Board_Process__c</fullName>
        <inlineHelpText>The Board Process this Step belongs to</inlineHelpText>
        <label>Board Process</label>
        <referenceTo>project_cloud__Board_Process__c</referenceTo>
        <relationshipLabel>Board Process Steps</relationshipLabel>
        <relationshipName>Board_Process_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completion_Category__c</fullName>
        <label>Completion Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Position__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Determines the order in which the steps take place</inlineHelpText>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Board Process Step</label>
    <nameField>
        <label>Board Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>